[tool.poetry]
name = "python_aes"
authors =  ["Tobias Wenzel <atobiasw225@gmail.com>"]
description = "Fun implementation of AES"
version = "0.0.1"
readme = "README.md"
packages = [{include = "python_aes"}]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.poetry.dependencies]
python = "^3.11"
pytest-asyncio = "^1.2.0"
aiofiles = "^24.1.0"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "~8.4"
pytest-cov = "~5.0.0"
requests = "~2.33.0"

[tool.poetry.group.lint]
optional = true

[tool.poetry.group.lint.dependencies]
pre-commit = "3.7.1"