[tool.poetry]
name = "python_aes"
authors =  ["Tobias Wenzel <atobiasw225@gmail.com>"]
description = "Fun implementation of AES"
version = "0.0.1"
readme = "README.md"
packages = [{include = "python_aes"}]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
ignore_missing_imports = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]

[tool.poetry.dependencies]
python = "^3.11"
pytest-asyncio = "^1.2.0"
aiofiles = "^24.1.0"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = ">=8.4,<9.1"
pytest-cov = "~5.0.0"

[tool.poetry.group.lint]
optional = true

[tool.poetry.group.lint.dependencies]
pre-commit = "3.7.1"
mypy = "^1.9"
bandit = "^1.7"
types-aiofiles = "^24.1"
