[tool.poetry]
name = "python_aes"
authors = ["Tobias Wenzel <tobiasw225@gmail.com>"]
description = "Fun implementation of AES"
version = "0.2.0"
readme = "README.md"
packages = [{include = "python_aes"}]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py314"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "PL", "RET"]
ignore = ["PLR0913"]

[tool.commitizen]
version = "0.2.0"
version_files = ["pyproject.toml"]
tag_format = "v$version"
version_scheme = "semver"

[tool.poetry.dependencies]
python = "^3.14"
pytest-asyncio = "^1.3.0"
aiofiles = "^25.1"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = ">=8.4,<9.1"
pytest-cov = "~5.0.0"

[tool.poetry.group.lint]
optional = true

[tool.poetry.group.lint.dependencies]
pre-commit = "^3.7"
ruff = "^0.14"
commitizen = "^3.30"
